--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,6 +1,6 @@
 :root {
   --background: #171717;
-  --text-color-primary: #FCFBF4;
+  --text-color-primary: #fcfbf4;
   --font-tl-medium: "RobustaTL Pro Medium", sans-serif;
   --font-tl-bold: "RobustaTL Pro Bold", sans-serif;
   --container-size: 1280px;
